Fix ui by changing flex-wrap to no-wrap

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
   height: 96.5vh;
 }
 
@@ -76,6 +76,7 @@ body {
       order: 1;
       flex: 1 0 65%;  /*  flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ] */
       height:60%;
+      overflow: auto;
     }
 
     /* -------------------------------------------------------------- */
@@ -89,6 +90,7 @@ body {
       order: 2;
       flex: 1 0 65%;  /*  flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ] */
       height: 40%;
+      overflow: auto;
     }
 
     /* -------------------------------------------------------------- */
@@ -103,6 +105,7 @@ body {
   order: 2;
   flex: 1 0 34%;
   height: 100%;
+  overflow: auto;
 }
 
 /* -------------------------------------------------------------- */
